# in5050-codec63

./: CMakeLists.txt  README.md  run.sh
c63-in-c/: CMakeLists.txt  c63.h  c63client.c
c63-in-cuda/: CMakeLists.txt  c63.h  c63_write.cu  c63_write.h  c63client.cu  c63dec.cu  c63enc.cu  c63server.cu  common.cu  common.h  io.cu  io.h  me.cu  me.h  quantdct.cu  quantdct.h  tables.cu  tables.h
cmake/: FindSISCI.cmake
